@@ -2325,8 +2325,8 @@ nC                                                # number of condensed joints
     geom         - 1: include geometric stiffness effects, 0: do not.
     hy           - cross-section dimension in the local y coordinate dir.
     hz           - cross-section dimension in the local z coordinate dir.
-    Iyy          - Moment of inertia for bending about the local y axis
-    Izz          - Moment of inertia for bending about the local z axis
+    Iy           - Moment of inertia for bending about the local y axis
+    Iz           - Moment of inertia for bending about the local z axis
     J            - Joint number
     J1           - Joint 1 of a frame element
     J2           - Joint 2 of a frame element
@@ -2334,7 +2334,7 @@ nC                                                # number of condensed joints
     JMx          - extra rotatory inertia of a joint about global x coord. dir.
     JMy          - extra rotatory inertia of a joint about global y coord. dir.
     JMz          - extra rotatory inertia of a joint about global z coord. dir.
-    Jxx          - Torsional moment of inertia of a frame element
+    Jx           - Torsional moment of inertia of a frame element
     lump         - 1: use lumped mass matrix, 0: use consistent mass matrix
     M            - Member number
     Mxx          - Joint Moment about the global X axis
